--- a/201711/20171117/20171117001.html
+++ b/201711/20171117/20171117001.html
@@ -11,7 +11,7 @@
 	<div id="cont"></div>
 	<script type="text/javascript">
 		$(document).ready(function(){
-			// $("#cont").load("http://www.yanhu.com/201711/20171114/20171114001.html");
+			$("#cont").load("http://www.yanhu.com/201711/20171114/20171114001.html");
 		});
 	</script>
 </body>
