--- a/201711/20171106/20171106001.html
+++ b/201711/20171106/20171106001.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript" src="http://www.jq22.com/demo/pageSlider-master20160711/dist/pageSlider.js"></script>
 </head>
 <body>
-	<div class="section sec1">1</div>
+	<div class="section sec1">手机页面</div>
 	<div class="section sec2">2</div>
 	<div class="section sec3">3</div>
 	<div class="section sec4">4</div>
