--- a/201709/20170901001/20170902001.html
+++ b/201709/20170901001/20170902001.html
@@ -72,7 +72,7 @@
 	mp3/Sarvagon2015.mp3
 	mp3/常思思 - 春天的芭蕾.mp3
 	-->
-	<script type="text/javascript" src="node_modules/aplayer/dist/APlayer.min.js"></script>
+	<script type="text/javascript" src="js/APlayer.min.js"></script>
 	<script type="text/javascript">
 		var ap = new APlayer({
 		    element: document.getElementById('player1'),                       // Optional, player element
