--- a/201709/20170901001/20170902003.html
+++ b/201709/20170901001/20170902003.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="player1" class="aplayer"></div>
-	<script type="text/javascript" src="node_modules/aplayer/dist/APlayer.min.js"></script>
+	<script type="text/javascript" src="js/APlayer.min.js"></script>
 	<script type="text/javascript">
 		var ap = new APlayer({
 		    element: document.getElementById('player1'),                       // Optional, player element
