--- a/201709/20170906001/loading.html
+++ b/201709/20170906001/loading.html
@@ -120,7 +120,7 @@
 			border: 1px solid #2A319C;
 		}
 	</style>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
 </head>
 <body>
 		<div id="show01">
