--- a/201708/20170828001/20170828001.html
+++ b/201708/20170828001/20170828001.html
@@ -24,7 +24,9 @@
 </head>
 <body>
 	<script type="text/javascript">
-		document.write(getNowFormatDate());
+		setTimeout(function(){
+			document.write(getNowFormatDate());
+		},1000);
 	</script>
 </body>
 </html>
