--- a/201801/20180129/index.html
+++ b/201801/20180129/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0">
-<title>2048</title>
+<title>随时随地2048</title>
 
 <link rel="stylesheet" href="css/reset.min.css">
 <link rel="stylesheet" href="css/style.css">
@@ -46,6 +46,6 @@
 
 </div>
 
-<script src="js/index.js?v=2"></script>
+<script src="js/index.js?v=3"></script>
 </body>
 </html>
