添加doc目录放文档，和软件

--- a/201712/20171211/20180208001.html
+++ b/201712/20171211/20180208001.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="/js/jquery.js"></script>
 </head>
 <body>
-	提现数：<input type="text" name="nums" class="totalNums">剩余数：<input type="text" class="lastNums">
-	<script type="text/javascript" src="index.js"></script>
+	<input type='text' class='binding'>
+	<script type="text/javascript" src="20180208001.js"></script>
 </body>
 </html>
