--- a/201802/20180227/20180227003/index.html
+++ b/201802/20180227/20180227003/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/require.js/2.1.9/require.js"></script>
-	<script type="text/javascript" src="js/5.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 	<p>这里代码不会阻塞</p>
