--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript" src="http://apps.bdimg.com/libs/require.js/2.1.9/require.js"></script>
 </head>
 <body>
 	<pre>
@@ -14,6 +13,7 @@
 		    //the module value for "helper/util".
 		});
 	</pre>
-	<script type="text/javascript" src="scripts/main.js"></script>
+	<script type="text/javascript" src="http://apps.bdimg.com/libs/require.js/2.1.9/require.js"></script>
+	<script type="text/javascript" src="scripts/main?v=5"></script>
 </body>
 </html>
