--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -14,6 +14,7 @@
 		});
 	</pre>
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/require.js/2.1.9/require.js"></script>
-	<script type="text/javascript" src="scripts/main?v=5"></script>
+	<!-- <script type="text/javascript" src="scripts/dist/main.js"></script> -->
+	<script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
