--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -14,7 +14,7 @@
 		});
 	</pre>
 	<script type="text/javascript" src="scripts/helper/require.js"></script>
-	<script type="text/javascript" src="scripts/dist/main.js"></script>
-	<!-- <script type="text/javascript" src="scripts/main.js"></script> -->
+	<!-- <script type="text/javascript" src="scripts/dist/main.js"></script> -->
+	<script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
