--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -13,8 +13,8 @@
 		    //the module value for "helper/util".
 		});
 	</pre>
-	<script type="text/javascript" src="scripts/helper/require.js"></script>
-	<!-- <script type="text/javascript" src="scripts/dist/main.js"></script> -->
+	<script type="text/javascript" src="scripts/require.js"></script>
+	<!-- <script type="text/javascript" src="dist/main.js"></script> -->
 	<script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
