--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -14,7 +14,7 @@
 		});
 	</pre>
 	<script type="text/javascript" src="js/scripts/require.js"></script>
-	<!-- <script type="text/javascript" src="js/dist/app.js"></script> -->
-	<script type="text/javascript" src="js/scripts/app.js"></script>
+	<script type="text/javascript" src="js/dist/app.js"></script>
+	<!-- <script type="text/javascript" src="js/scripts/app.js"></script> -->
 </body>
 </html>
