--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -5,16 +5,10 @@
 	<title>Document</title>
 </head>
 <body>
-	<pre>
-		requirejs(["helper/util"], function(util) {
-		    //This function is called when scripts/helper/util.js is loaded.
-		    //If util.js calls define(), then this function is not fired until
-		    //util's dependencies have loaded, and the util argument will hold
-		    //the module value for "helper/util".
-		});
-	</pre>
-	<script type="text/javascript" src="js/dist/app.js"></script>
-	<!-- <script type="text/javascript" src="js/scripts/require.js"></script> -->
-	<!-- <script type="text/javascript" src="js/scripts/app.js"></script> -->
+	<div id="poem"></div>
+	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
+	<script type="text/javascript" src="dist/app.js"></script>
+	<!-- <script type="text/javascript" src="js/require.js"></script> -->
+	<!-- <script type="text/javascript" src="js/app.js"></script> -->
 </body>
 </html>
