--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -7,8 +7,8 @@
 <body>
 	<div id="poem"></div>
 	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
-	<script type="text/javascript" src="dist/app.js"></script>
-	<!-- <script type="text/javascript" src="js/require.js"></script> -->
-	<!-- <script type="text/javascript" src="js/app.js"></script> -->
+	<!-- <script type="text/javascript" src="dist/app.js"></script> -->
+	<script type="text/javascript" src="js/require.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
