--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -102,8 +102,26 @@
 	  </tr>
 	</table>
 	<hr>
-	<script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script>
-	<!-- <script type="text/javascript" src="dist/app.js"></script> -->
+	<button id="btn_addbook">添加书签</button>
+	<hr>
+	<canvas id="machine" width="263" height="114"></canvas>
+	<img src="img/spr24_lottery.png" alt="" id="spr_lottery" style="display:none;">
+	<hr>
+	moneyCountUp<div id="myTargetElement">
+		<em>0</em>
+		<em>0</em>
+		<em>0</em>
+		<em>0</em>
+		<em>0</em>
+	</div>
+	<hr>
+	<div title="loop">
+		1
+		<canvas id="loop" width="500" height="400"></canvas>
+		2
+	</div>
+	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
+	<script type="text/javascript" src="dist/app.js"></script>
 	<!-- <script type="text/javascript" src="js/require.js"></script> -->
 	<!-- <script type="text/javascript" src="js/app.js"></script> -->
 </body>
