--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -120,8 +120,8 @@
 		<canvas id="loop" width="500" height="400"></canvas>
 		2
 	</div>
-	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
-	<script type="text/javascript" src="dist/app.js"></script>
+	<script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script>
+	<!-- <script type="text/javascript" src="dist/app.js"></script> -->
 	<!-- <script type="text/javascript" src="js/require.js"></script> -->
 	<!-- <script type="text/javascript" src="js/app.js"></script> -->
 </body>
