--- a/201708/20170817002/index.html
+++ b/201708/20170817002/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/common.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="/js/jquery.js"></script>
 </head>
 <body>
 	<div class="content"></div>
