--- a/201708/20170828001/20170828001.html
+++ b/201708/20170828001/20170828001.html
@@ -24,7 +24,7 @@
 	</script>
 </head>
 <body>
-	<div id="time"></div>
+	<h1>时钟：<span id="time"></span></h1>
 	<script type="text/javascript">
 		var timeBox = document.getElementById("time");
 		setInterval(function(){
