--- a/201709/20170910002/api.html
+++ b/201709/20170910002/api.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script type="text/javascript" src="http://m.sjzhushou.com/h5/lib/client.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<style type="text/css">
