--- a/201709/20170912001/20170912001.html
+++ b/201709/20170912001/20170912001.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
-		<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
+		<script type="text/javascript" src="/js/jquery.js"></script>
 		<style type="text/css">
 				.invoice_cont_box{width: 90px !important;}
 				.invoice_cont_box .select-cont{z-index: 1 !important;}
@@ -40,6 +40,7 @@
 			</style>
 	</head>
 	<body>
+		<h1>气泡提示DEMO,点登录按钮看效果</h1>
 		<form id="loginForm">
 			<div>
 				<div>请登录：</div>
