移动端touch事件demo

--- a/201709/20170915001/Scroll.html
+++ b/201709/20170915001/Scroll.html
@@ -65,7 +65,7 @@
         -webkit-transition: left .2s linear;
     }
     </style>
-    <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="http://m.sjzhushou.com/h5/lib/client.js"></script>
 </head>
 
