jQquery demo,axios demo

--- a/201709/20170924001/20170924001.html
+++ b/201709/20170924001/20170924001.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
 </head>
 <body>
+	<h1>jQuery.Ajax POST方法</h1>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			var brandInfo = '';
