--- a/201709/20170924001/20170924002.html
+++ b/201709/20170924001/20170924002.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript" src="js/axios.js"></script>
+	<script type="text/javascript" src="/js/axios.js"></script>
 </head>
 <body>
+	<h1>axios GET方法调用接口</h1>
 	<script type="text/javascript">
 		;(function(){
 			axios({
