简单的js加密

--- a/201710/20171012/20171012002.html
+++ b/201710/20171012/20171012002.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
+    <h1>简单的jS加密解密</h1>
 <script>
     function en(code, h){
         //简单的jS加密解密<br>//code为对应的字符串，h为（2，8，10，16）就是要转成的几进制<br>function en(code, h) {
