--- a/201711/20170711/20170711004.html
+++ b/201711/20170711/20170711004.html
@@ -4,7 +4,7 @@
     <title>TODO supply a title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <script src="node_modules/avalon2/dist/avalon.js"></script>
+    <script src="/js/avalon.js"></script>
     <script>
         avalon.define({
             $id: 'testtest',
