--- a/201711/20170711/20170712001.html
+++ b/201711/20170711/20170712001.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Document</title>
 		<link rel="shortcut icon" href="../favicon.ico"></head>
-		<script src="node_modules/avalon2/dist/avalon.js"></script>
+		<script src="/js/avalon.js"></script>
 	</head>
 	<body>
 		<div ms-controller="validate1">
