--- a/201711/20170711/20170711001.html
+++ b/201711/20170711/20170711001.html
@@ -4,7 +4,7 @@
         <title>first example</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="node_modules/avalon2/dist/avalon.js"></script>
+        <script src="/js/avalon.js"></script>
     </head>
 
     <body>
