--- a/201711/20170711/20170713001.html
+++ b/201711/20170711/20170713001.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="node_modules/avalon2/dist/avalon.js"></script>
-	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src="/js/avalon.js"></script>
+	<script src="/js/jquery.js"></script>
 	<style type="text/css">
 		.btn-select{display: block;position: relative;height: 38px;width:90px;line-height: 38px;border: 1px solid #ccc;border-radius: 4px;font-size: 12px;color: #333;text-indent: 6px;}
 		.select-cont{position: absolute;top: 100%;left: 0;right: 0;border: 1px solid #ccc;background: #fff;border-radius: 4px;max-height: 144px;overflow-y: auto;}
