--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="poem"></div>
+	<div id="poem" class="poemClass" title="一首小诗" lang="ch-zh" dir="ltr"></div>
 	<hr>
 	<div title="分页模块">
 		<h1>jQuery Pagination分页插件demo</h1>
