给图片添加name属性

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -105,7 +105,7 @@
 	<button id="btn_addbook">添加书签</button>
 	<hr>
 	<canvas id="machine" width="263" height="114"></canvas>
-	<img src="img/spr24_lottery.png" alt="" id="spr_lottery" style="display:none;">
+	<img src="img/spr24_lottery.png" alt="" id="spr_lottery" name="lotterBallImg" style="display:none;">
 	<hr>
 	moneyCountUp<div id="myTargetElement">
 		<em>0</em>
