添加相应的描述

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -107,7 +107,8 @@
 	<canvas id="machine" width="263" height="114"></canvas>
 	<img src="img/spr24_lottery.png" alt="" id="spr_lottery" name="lotterBallImg" style="display:none;">
 	<hr>
-	moneyCountUp<div id="myTargetElement">
+	<h1>moneyCountUp</h1>
+	<div id="myTargetElement">
 		<em>0</em>
 		<em>0</em>
 		<em>0</em>
@@ -115,6 +116,7 @@
 		<em>0</em>
 	</div>
 	<hr>
+	<h1>loop.js</h1>
 	<div title="loop">
 		1
 		<canvas id="loop" width="500" height="400"></canvas>
