添加一行注释和纯文本

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="poem" class="poemClass" title="一首小诗" lang="ch-zh" dir="ltr" data-nums="5"></div>
-	<hr>
+	<!--下面是一首小诗《纽约时间比加州时间早三个小时》-->
+	<div id="poem" class="poemClass" title="一首小诗" lang="ch-zh" dir="ltr" data-nums="5"></div>plain text<hr>
 	<div title="分页模块">
 		<h1>jQuery Pagination分页插件demo</h1>
 		<div id="Pagination" class="pagination"><!-- 这里显示分页 --></div>
