html5shiv modlue

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div title="HTML5 Tag">
-	    <article class="article" style="color:red">article</article>
+	    <article class="article">article</article>
 	    <aside class="aside">aside</aside>
 	    <dialog class="dialog">dialog</dialog>
 	    <figcaption class="figcaption">figcaption</figcaption>
