--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/html5.css">
+	<link rel="stylesheet" type="text/css" href="css/slider.css">
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/common/html5shiv.js"></script>
 	<![endif]-->
@@ -139,7 +141,17 @@
 		<canvas id="loop" width="500" height="400"></canvas>
 		2
 	</div>
-	
+	<hr>
+	<div title="slider" class="slider">
+		<h1>$.fn.textSlider Up</h1>
+		<div id="sliderUp">
+			<ul></ul>
+		</div>
+		<h1>$.fn.textSlider Left</h1>
+		<div id="sliderLeft">
+			<ul></ul>
+		</div>
+	</div>
 	<script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script>
 	<!-- <script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script> -->
 	<!-- <script type="text/javascript" src="js/require.js"></script> -->
