贝塞尔曲线动画样式

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/app/style.css">
 	<link rel="stylesheet" type="text/css" href="css/app/html5.css">
 	<link rel="stylesheet" type="text/css" href="css/app/slider.css">
+	<link rel="stylesheet" type="text/css" href="css/app/path.css">
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/common/html5shiv.js"></script>
 	<![endif]-->
@@ -128,10 +129,13 @@
 	<hr>
 	<button id="btn_addbook">添加书签</button>
 	<hr>
+	<h1>ballPaly</h1>
+	<div><a href="javascript:;" class="ballPalyBtn">ballPalyBtn</a></div>
 	<canvas id="machine" width="263" height="114"></canvas>
 	<img src="img/spr24_lottery.png" alt="" id="spr_lottery" name="lotterBallImg" style="display:none;">
 	<hr>
 	<h1>moneyCountUp</h1>
+	<div><a href="javascript:;" class="myTargetElementBtn">myTargetElementBtn</a></div>
 	<div id="myTargetElement">
 		<em>0</em>
 		<em>0</em>
@@ -297,6 +301,15 @@
 		    <p><small>Another thing from <a href="//daneden.me">Daniel Eden</a>.</small></p>
 		  </div>
 		</main><!-- /.site__content -->
+	</div>
+	<div title="$.path.bezier">
+		<h1>$.path.bezier</h1>
+		<div class="bezier">
+			<a href="javascript:;" class="animatePathBtn">animatePathBtn</a>
+			<div class="moneyfly">12元</div>
+			<div class="pointa"></div>
+			<div class="pointb"></div>
+		</div>
 	</div>
 	<script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script>
 	<!-- <script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script> -->
