给一首诗添加模块限制div

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 	<div title="HTML5 Tag">
+		<h1>HTML5标签IE6-IE8支持</h1>
 	    <article class="article">article</article>
 	    <aside class="aside">aside</aside>
 	    <dialog class="dialog">dialog</dialog>
@@ -31,8 +32,12 @@
 	    <nav class="nav">nav</nav>
 	    <section class="section">section</section>
 	</div>
-	<!--下面是一首小诗《纽约时间比加州时间早三个小时》-->
-	<div id="poem" class="poemClass" title="一首小诗" lang="ch-zh" dir="ltr" data-nums="5"></div>plain text<hr>
+	<div title="RequireJS txt插件，加载文本文件">
+		<!--下面是一首小诗《纽约时间比加州时间早三个小时》-->
+		<h1>RequireJS txt插件，加载文本文件</h1>
+		<div id="poem" class="poemClass" title="一首小诗" lang="ch-zh" dir="ltr" data-nums="5">
+		</div>plain text<hr>
+	</div>
 	<div title="分页模块">
 		<h1>jQuery Pagination分页插件demo</h1>
 		<div id="Pagination" class="pagination"><!-- 这里显示分页 --></div>
@@ -129,8 +134,8 @@
 	<hr>
 	<button id="btn_addbook">添加书签</button>
 	<hr>
-	<h1>ballPaly</h1>
-	<div><a href="javascript:;" class="ballPalyBtn">ballPalyBtn</a></div>
+	<h1>ballplay</h1>
+	<div><a href="javascript:;" class="ballplayBtn">ballplayBtn</a></div>
 	<canvas id="machine" width="263" height="114"></canvas>
 	<img src="img/spr24_lottery.png" alt="" id="spr_lottery" name="lotterBallImg" style="display:none;">
 	<hr>
