添加至书签好

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -132,15 +132,16 @@
 	  </tr>
 	</table>
 	<hr>
+	<h1>添加至书签插件</h1>
 	<button id="btn_addbook">添加书签</button>
 	<hr>
-	<h1>ballplay</h1>
-	<div><a href="javascript:;" class="ballplayBtn">ballplayBtn</a></div>
+	<h1>ballPlay</h1>
+	<div><button class="butt ballplayBtn">ballPlayBtn</button></div>
 	<canvas id="machine" width="263" height="114"></canvas>
 	<img src="img/spr24_lottery.png" alt="" id="spr_lottery" name="lotterBallImg" style="display:none;">
 	<hr>
 	<h1>moneyCountUp</h1>
-	<div><a href="javascript:;" class="myTargetElementBtn">myTargetElementBtn</a></div>
+	<div><button class="butt myTargetElementBtn">myTargetElementBtn</button></div>
 	<div id="myTargetElement">
 		<em>0</em>
 		<em>0</em>
@@ -307,10 +308,11 @@
 		  </div>
 		</main><!-- /.site__content -->
 	</div>
+	<hr>
 	<div title="$.path.bezier">
 		<h1>$.path.bezier</h1>
 		<div class="bezier">
-			<a href="javascript:;" class="animatePathBtn">animatePathBtn</a>
+			<button class="butt animatePathBtn">animatePathBtn</button>
 			<div class="moneyfly">12元</div>
 			<div class="pointa"></div>
 			<div class="pointb"></div>
