--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -135,6 +135,14 @@
 	<h1>添加至书签插件</h1>
 	<button id="btn_addbook">添加书签</button>
 	<hr>
+	<div title="bluebired模块">
+		<h1>bluebired模块</h1>
+		<div class="center">
+			<p>console.log(<span id="bluebired"></span>)←3秒延迟</p>
+		</div>
+	</div>
+
+	<hr>
 	<h1>ballPlay</h1>
 	<div><button class="butt ballplayBtn">ballPlayBtn</button></div>
 	<canvas id="machine" width="263" height="114"></canvas>
@@ -323,8 +331,8 @@
 		<h1>QRCode模块</h1>
 		<div id="QRCode"></div>
 	</div>
-	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
-	<script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script>
+	<script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script>
+	<!-- <script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script> -->
 	<!-- <script type="text/javascript" src="js/require.js"></script> -->
 	<!-- <script type="text/javascript" src="js/app.js"></script> -->
 </body>
