--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -331,6 +331,11 @@
 		<h1>QRCode模块</h1>
 		<div id="QRCode"></div>
 	</div>
+	<hr>
+	<div title="弹幕">
+		<h1>弹幕模块</h1>
+		<div id="act_danmu" class="list_danmu"></div>
+	</div>
 	<script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script>
 	<!-- <script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script> -->
 	<!-- <script type="text/javascript" src="js/require.js"></script> -->
