修改bluebired演示模块调用形式

--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -137,6 +137,7 @@
 	<hr>
 	<div title="bluebired模块">
 		<h1>bluebired模块</h1>
+		<button class="butt promiseBtn">promiseBtn</button>
 		<div class="center">
 			<p>console.log(<span id="bluebired"></span>)←3秒延迟</p>
 		</div>
