--- a/201802/20180227/20180227001/index.html
+++ b/201802/20180227/20180227001/index.html
@@ -3,19 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="css/common/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/app/style.css">
-	<link rel="stylesheet" type="text/css" href="css/app/html5.css">
-	<link rel="stylesheet" type="text/css" href="css/app/slider.css">
-	<link rel="stylesheet" type="text/css" href="css/app/path.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/common/html5shiv.js"></script>
 	<![endif]-->
 	<link rel="dns-prefetch" href="//fonts.googleapis.com" />
-	<link rel="dns-prefetch" href="//code.jquery.com" />
 	<link href='//fonts.googleapis.com/css?family=Roboto:400,100,400italic,700italic,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/common/animate.css">
-	<link rel="stylesheet" type="text/css" href="css/app/animate.css">
+	<link rel="dns-prefetch" href="//code.jquery.com" />
 </head>
 <body>
 	<div title="HTML5 Tag">
@@ -337,9 +331,9 @@
 		<h1>弹幕模块</h1>
 		<div id="act_danmu" class="list_danmu"></div>
 	</div>
-	<script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script>
+	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
 	<!-- <script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script> -->
-	<!-- <script type="text/javascript" src="js/require.js"></script> -->
-	<!-- <script type="text/javascript" src="js/app.js"></script> -->
+	<script type="text/javascript" src="js/require-2.3.5.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
