--- a/201803/20180326/video/index.html
+++ b/201803/20180326/video/index.html
@@ -15,9 +15,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css/shop-item.css" rel="stylesheet">
-    <!-- unpkg -->
-    <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
-    <script src="https://unpkg.com/video.js/dist/video.js"></script>
   </head>
 
   <body>
@@ -66,22 +63,7 @@
         <!-- /.col-lg-3 -->
 
         <div class="col-lg-9">
-          <video
-              id="my-player"
-              class="video-js container"
-              controls
-              preload="auto"
-              poster="images/yaodong.jpg"
-              data-setup='{}'>
-            <source src="http://qiniu.luojianet.com/video%E7%AA%91%E6%B4%9E%E9%87%8C%E7%9A%84%E8%AF%BB%E4%B9%A6%E4%BA%BA.mp4" type="video/mp4"></source>
-            <p class="vjs-no-js">
-              To view this video please enable JavaScript, and consider upgrading to a
-              web browser that
-              <a href="http://videojs.com/html5-video-support/" target="_blank">
-                supports HTML5 video
-              </a>
-            </p>
-          </video>
+          <video poster="images/yaodong.jpg" controls="controls" style="width: 100%;"><source src="http://qiniu.luojianet.com/video%E7%AA%91%E6%B4%9E%E9%87%8C%E7%9A%84%E8%AF%BB%E4%B9%A6%E4%BA%BA.mp4" type="video/mp4"><source src="movie.ogg" type="video/ogg">您的浏览器不支持 video 标签。</video>
           <div class="card mt-4">
             <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
             <div class="card-body">
