--- a/201803/20180326/index.html
+++ b/201803/20180326/index.html
@@ -60,12 +60,12 @@
       <div class="row">
         <div class="col-md-7">
           <a href="video/index.html">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="images/yaodong.jpg" alt="">
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Project One</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+          <h3>窑洞里的读书人</h3>
+          <p>《窑洞里的读书人》是一部由央视新闻新媒体于2018年出品的时政微视频，讲述了习近平总书记热爱读书追求真理的事迹。</p>
           <a class="btn btn-primary" href="video/index.html">View Project</a>
         </div>
       </div>
