--- a/201803/20180326/video/index.html
+++ b/201803/20180326/video/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">Video Site</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,11 +65,11 @@
         <div class="col-lg-9">
           <video poster="images/yaodong.jpg" controls="controls" style="width: 100%;"><source src="http://qiniu.luojianet.com/video%E7%AA%91%E6%B4%9E%E9%87%8C%E7%9A%84%E8%AF%BB%E4%B9%A6%E4%BA%BA.mp4" type="video/mp4"><source src="movie.ogg" type="video/ogg">您的浏览器不支持 video 标签。</video>
           <div class="card mt-4">
-            <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
+            <img class="card-img-top img-fluid" src="images/MAIN201803011331000147637801999.jpg" alt="">
             <div class="card-body">
-              <h3 class="card-title">Product Name</h3>
-              <h4>$24.99</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores, sint aperiam sequi pariatur praesentium animi perspiciatis molestias iure, ducimus!</p>
+              <h3 class="card-title">窑洞里的读书人</h3>
+              <h4>$00.00</h4>
+              <p class="card-text">《窑洞里的读书人》是一部由央视新闻新媒体于2018年出品的时政微视频，讲述了习近平总书记热爱读书追求真理的事迹。</p>
               <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
               4.0 stars
             </div>
