视频信仰之跃

--- a/201803/20180326/index.html
+++ b/201803/20180326/index.html
@@ -59,14 +59,14 @@
       <!-- Project One -->
       <div class="row">
         <div class="col-md-7">
-          <a href="video/index.html">
+          <a href="video/2018032601.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="images/yaodong.jpg" alt="">
           </a>
         </div>
         <div class="col-md-5">
           <h3>窑洞里的读书人</h3>
           <p>《窑洞里的读书人》是一部由央视新闻新媒体于2018年出品的时政微视频，讲述了习近平总书记热爱读书追求真理的事迹。</p>
-          <a class="btn btn-primary" href="video/index.html">View Project</a>
+          <a class="btn btn-primary" href="video/2018032601.html">View Project</a>
         </div>
       </div>
       <!-- /.row -->
@@ -76,14 +76,14 @@
       <!-- Project Two -->
       <div class="row">
         <div class="col-md-7">
-          <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          <a href="video/2018033001.html">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="images/01300001128119146898882215947.jpg" alt="">
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Project Two</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+          <h3>信仰之跃</h3>
+          <p>雏鸟刚出生，就要面临一道人生最大的选择题——它们必须从一百多米高的悬崖上纵身跳下，以自由落体地方式下到崖底、来到地面，才能获得生存所需的食物。对此，它们的父母无法提供任何帮助，它们必须勇敢地独自迈出这一步，完成“信仰之跃”。这是白颊黑雁雏鸟们无法逃避的命运，一出生就要面临赌命的抉择：要么饿死，要么跳下去；要么摔死，要么活下来。雏鸟们能依赖的，只有它们的勇气和运气。</p>
+          <a class="btn btn-primary" href="video/2018033001.html">View Project</a>
         </div>
       </div>
       <!-- /.row -->
