--- a/requirejs_dev/index.html
+++ b/requirejs_dev/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="css/style.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/common/html5shiv.js"></script>
 	<![endif]-->
@@ -333,7 +333,7 @@
 	</div>
 	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
 	<script type="text/javascript" src="js/require-2.3.5.js"></script>
-	<!-- <script type="text/javascript" src="js/app.js"></script> -->
-	<script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<!-- <script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script> -->
 </body>
 </html>
