--- a/requirejs_pro/index.html
+++ b/requirejs_pro/index.html
@@ -332,7 +332,7 @@
 		<div id="act_danmu" class="list_danmu"></div>
 	</div>
 	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
-	<script type="text/javascript" src="js/require-2.3.5.js"></script>
+	<!-- <script type="text/javascript" src="js/require-2.3.5.js"></script> -->
 	<script type="text/javascript" src="js/app.js"></script>
 	<!-- <script type="text/javascript" src="dist/app.js"><h1>script有src属性时，script标签内元素，代码不会执行</h1>alert(1);</script> -->
 </body>
