--- a/201804/20180404/20180404001.html
+++ b/201804/20180404/20180404001.html
@@ -2,14 +2,33 @@
 <html>	
 <head>
 <meta charset="utf-8"> 
-<title>菜鸟教程(runoob.com)</title> 
-<link rel="stylesheet" type="text/css" href="style.css">
+<title>autoprefixer</title> 
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
 <div>你好。这是一个 DIV 元素。</div>
 
 <div id="div2">你好。这是一个 DIV 元素。</div>
-
+<div class="banner-steps">
+	<ul>
+		<li>
+			<i class="steps-img step01"></i>
+			<p>开通会员</p>
+		</li>
+		<li>
+			<i class="steps-img step02"></i>
+			<p>京东金融扫码</p>
+		</li>
+		<li>
+			<i class="steps-img step03"></i>
+			<p>1分钱支付</p>
+		</li>
+		<li class="last">
+			<i class="steps-img step04"></i>
+			<p>抽iPhone X</p>
+		</li>
+	</ul>
+</div>
 </body>
 </html>
