完善postcss autoprefixer demo

--- a/201804/20180404/20180404001.html
+++ b/201804/20180404/20180404001.html
@@ -3,13 +3,11 @@
 <head>
 <meta charset="utf-8"> 
 <title>autoprefixer</title> 
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="dist/style.css">
 </head>
 <body>
 
-<div>你好。这是一个 DIV 元素。</div>
-
-<div id="div2">你好。这是一个 DIV 元素。</div>
+<div class="transitionWidth"></div>
 <div class="banner-steps">
 	<ul>
 		<li>
