--- a/201804/20180404/20180404001.html
+++ b/201804/20180404/20180404001.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
-<html>	
-<head>
-<meta charset="utf-8"> 
-<title>autoprefixer</title> 
-<link rel="stylesheet" type="text/css" href="dist/style.css">
-</head>
-<body>
-
-<div class="transitionWidth"></div>
-<div class="banner-steps">
-	<ul>
-		<li>
-			<i class="steps-img step01"></i>
-			<p>开通会员</p>
-		</li>
-		<li>
-			<i class="steps-img step02"></i>
-			<p>京东金融扫码</p>
-		</li>
-		<li>
-			<i class="steps-img step03"></i>
-			<p>1分钱支付</p>
-		</li>
-		<li class="last">
-			<i class="steps-img step04"></i>
-			<p>抽iPhone X</p>
-		</li>
-	</ul>
-</div>
-<div id="appenBox"></div>
-<script type="text/javascript" src="dist/app.js"></script>
-</body>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>autoprefixer</title>
+	</head>
+	<body>
+		<div class="banner-steps">
+			<ul>
+				<li>
+					<i class="steps-img step01"></i>
+					<p>开通会员</p>
+				</li>
+				<li>
+					<i class="steps-img step02"></i>
+					<p>京东金融扫码</p>
+				</li>
+				<li>
+					<i class="steps-img step03"></i>
+					<p>1分钱支付</p>
+				</li>
+				<li class="last">
+					<i class="steps-img step04"></i>
+					<p>抽iPhone X</p>
+				</li>
+			</ul>
+		</div>
+		<div id="appenBox"></div>
+		<script type="text/javascript" src="dist/first.js"></script>
+	</body>
 </html>
