雪碧图添加版本hash

--- a/201804/20180404/20180404002.html
+++ b/201804/20180404/20180404002.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>postcss demo 2</h1>
+	<div class="oaicon"></div>
 	<div class="transitionWidth"></div>
 	<script type="text/javascript" src="dist/second.js"></script>
 </body>
