修改项目样式

--- a/201804/20180404/20180404001.html
+++ b/201804/20180404/20180404001.html
@@ -25,7 +25,7 @@
 				</li>
 			</ul>
 		</div>
-		<div id="appenBox"></div>
+		<pre id="appenBox"></pre>
 		<script type="text/javascript" src="dist/first.js"></script>
 	</body>
 </html>
