--- a/201804/20180404/20180404001.html
+++ b/201804/20180404/20180404001.html
@@ -27,6 +27,9 @@
 		</div>
 	<pre id="appenBox"></pre>
 	<div class="jsonDataDiv"></div>
+	<div class="xmlDataDiv">
+		
+	</div>
 	<script type="text/javascript" src="dist/first.js"></script>
 </body>
 </html>
