--- a/201804/20180404/20180404001.html
+++ b/201804/20180404/20180404001.html
@@ -2,34 +2,34 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>autoprefixer</title>
+		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
-		<div class="banner-steps">
-			<ul>
-				<li>
-					<i class="steps-img step01"></i>
-					<p>开通会员</p>
-				</li>
-				<li>
-					<i class="steps-img step02"></i>
-					<p>京东金融扫码</p>
-				</li>
-				<li>
-					<i class="steps-img step03"></i>
-					<p>1分钱支付</p>
-				</li>
-				<li class="last">
-					<i class="steps-img step04"></i>
-					<p>抽iPhone X</p>
-				</li>
-			</ul>
+		<div class="animateBox cf">
+			<div class="banner-steps animated fadeInLeft">
+				<ul>
+					<li>
+						<i class="steps-img step01"></i>
+						<p>开通会员</p>
+					</li>
+					<li>
+						<i class="steps-img step02"></i>
+						<p>京东金融扫码</p>
+					</li>
+					<li>
+						<i class="steps-img step03"></i>
+						<p>1分钱支付</p>
+					</li>
+					<li class="last">
+						<i class="steps-img step04"></i>
+						<p>抽iPhone X</p>
+					</li>
+				</ul>
+			</div>
+			<pre id="appenBox" class="animated fadeInDown"></pre>
+			<div></div>
 		</div>
-	<pre id="appenBox"></pre>
-	<div class="jsonDataDiv"></div>
-	<div class="xmlDataDiv">
-		
-	</div>
-	<script type="text/javascript" src="dist/first.js"></script>
+	<p class="jsonDataDiv"></p>
+	<div class="xmlDataDiv"></div>
 </body>
 </html>
