--- a/201804/20180419/index.html
+++ b/201804/20180419/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>
-        Code Spliting
+        <%= htmlWebpackPlugin.options.title %>
     </title>
 </head>
 
 <body>
     <a href="javascript:;" id="btn">lazyLoading Button</a>
-<script type="text/javascript" src="app.js"></script></body>
+</body>
 
 </html>
