--- a/201804/20180419/template.html
+++ b/201804/20180419/template.html
@@ -10,6 +10,7 @@
 
 <body>
     <a href="javascript:;" id="btn">lazyLoading Button</a>
+    <a href="javascript:;" id="bt2">lazyLoading Button2</a>
 </body>
 
 </html>
