--- a/201804/20180419/template.html
+++ b/201804/20180419/template.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-
 <body>
-    <a href="javascript:;" id="btn">lazyLoading Button</a>
-    <a href="javascript:;" id="bt2">lazyLoading Button2</a>
+    <a href="javascript:;" id="btn">lazyLoading Button</a><br>
+    <a href="javascript:;" id="btn2">lazyLoading Button2</a>
 </body>
-
 </html>
