--- a/201804/20180419/template.html
+++ b/201804/20180419/template.html
@@ -3,6 +3,8 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script type="text/javascript" src="../src/es5-shim.js"></script>
+    <script type="text/javascript" src="../src/promise-polyfill.js"></script>
 </head>
 <body>
     <a href="javascript:;" id="btn">lazyLoading Button</a><br>
