--- a/201804/20180427/loadModule.html
+++ b/201804/20180427/loadModule.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
-	<script type="text/javascript" src="dist/webpack-numbers.js"></script>
+	<script type="text/javascript" src="dist/numbers-convert.js"></script>
 </head>
 <body>
 	
