--- a/requirejs_dev/index.html
+++ b/requirejs_dev/index.html
@@ -331,6 +331,11 @@
 		<h1>弹幕模块</h1>
 		<div id="act_danmu" class="list_danmu"></div>
 	</div>
+	<hr>
+	<div title="loginModel">
+		<h1>登录模块</h1>
+		<div id="loginModule"></div>
+	</div>
 	<!-- <script type="text/javascript" data-main="js/app.js" src="js/require-2.3.5.js"></script> -->
 	<script type="text/javascript" src="js/require-2.3.5.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
