--- a/201806/20180615/index.html
+++ b/201806/20180615/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>获取4G局域网ip地址</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 </head>
 <body>
 	<p id="ip"></p>
