--- a/201709/20170910002/20170910001.html
+++ b/201709/20170910002/20170910001.html
@@ -42,5 +42,10 @@
 	<a href="http://www.yanhu.com/201709/20170915001/TrackPoint.html" class="toLiveRoom">RedPoint</a>
 	<a href="http://www.yanhu.com/201709/20170915001/Scroll.html" class="toLiveRoom">Scroll</a>
 	<a href="api.html" class="toLiveRoom animated fadeInUp">API</a>
+	<a href="20180619001.html" class="toLiveRoom animated fadeInUp">分享</a>
+	<a href="https://act-vip-ssl.xunlei.com/m/vip/2018/vip2018chjs/index.html" class="toLiveRoom animated fadeInUp">分享</a>
+	<a href="https://vip.xunlei.com/vip_wap/ticket/index.html?v=1" class="toLiveRoom animated fadeInUp">代金券</a>
+	<a href="http://act.vip.xunlei.com/m/vip/2018/vip2018hs55/?v=5" class="toLiveRoom animated fadeInUp">玩客云联合活动</a>
+	<a href="https://act-vip-ssl.xunlei.com/m/vip/2018/xntq/index.html" class="toLiveRoom animated fadeInUp">虚拟特权页面</a>
 </body>
 </html>
