--- a/201808/baidu/index.html
+++ b/201808/baidu/index.html
@@ -24,18 +24,33 @@
 		    <input type="submit" value="百度一下" class="bn" />
 		</form>
 		<div class="a">
-			<a href="https://wk.baidu.com/">文库</a>
-			<a href="http://image.baidu.com">图片</a>
-			<a href="https://zhidao.baidu.com/">知道</a>
-			<a href="http://m.news.baidu.com/news">新闻</a>
-			<a href="https://wapbaike.baidu.com/">百科</a>
+			<a href="https://wk.baidu.com/">文库</a><a href="http://image.baidu.com">图片</a><a href="https://zhidao.baidu.com/">知道</a><a href="http://m.news.baidu.com/news">新闻</a><a href="https://wapbaike.baidu.com/">百科</a>
 		</div>
 		<div class="a">
-			<a href="http://ios.pgzs.com">应用</a>
-			<a href="https://map.baidu.com/mobile/webapp/index/index/foo=bar/vt=map">地图</a>
-			<a href="https://tieba.baidu.com/">贴吧</a>
-			<a href="https://m.hao123.com/">hao123</a>
-			<a href="javascript:;">更多</a>
+			<a href="http://ios.pgzs.com">应用</a><a href="https://map.baidu.com/mobile/webapp/index/index/foo=bar/vt=map">地图</a><a href="https://tieba.baidu.com/">贴吧</a><a href="https://m.hao123.com/">hao123</a><a href="javascript:;">更多</a>
+		</div>
+		<div class="d">
+			<div class="b">
+				<a href="http://www.xmkanshu.com/">小说</a><a href="http://g.baidu.com/">游戏</a><a href="http://duokoo.baidu.com/vdl/">下载</a>
+			</div>
+			<div class="c">
+				<span>下载：</span><a href="https://downpack.baidu.com/litebaiduboxapp_AndroidPhone_1021514q.apk">百度客户端</a><a href="https://mobile.baidu.com/">百度应用</a><a href="http://mo.baidu.com/map/?from=1708">地图</a>
+			</div>
+			<div class="f">
+			    <noscript>
+			        <style>
+			        .ls {
+			            display: none;
+			        }
+			        </style>
+			    </noscript>
+			    <p class="ls">
+			    	<a id="switch-to-iphone" class="ip" href="https://m.baidu.com/?from=1013843a&pu=sz@1320_480&wpo=btmbase">完整版</a>
+			    </p>
+			    <p>
+			    	<a href='javascript:;'>Baidu&nbsp;京ICP证030173号</a>
+			    </p>
+			</div>
 		</div>
 	</div>
 </body>
