--- a/201808/baidu/index.html
+++ b/201808/baidu/index.html
@@ -9,10 +9,18 @@
 	<link rel="shortcut icon" href="https://gss0.bdstatic.com/5bd1bjqh_Q23odCf/static/wiseindex/img/favicon64.ico" type="image/x-icon">
 	<link rel="apple-touch-icon-precomposed" href="https://gss0.bdstatic.com/5bd1bjqh_Q23odCf/static/wiseindex/img/screen_icon_new.png">
 	<link rel="stylesheet" href="css/index.css">
+	<script type="text/javascript">
+	function form_submit() {
+	    time = (new Date()).getTime().toString();
+	    time = time.substring(time.length - 7);
+	    document.getElementsByName('ts')[0].value = time;
+	    return true;
+	}
+	</script>
 </head>
 <body>
 	<div class="wrap">
-		<div class="lg"><img src="//m.baidu.com/static/index/u.png" alt="百度首页" /></div>
+		<div class="lg"><img src="images/u.png" alt="百度首页" /></div>
 		<form action="https://m.baidu.com/pu=sz%401321_2001/s" method="get" onsubmit="return form_submit()">
 		    <div class="wordWrap">
 		        <input type="text" name="word" maxlength="64" size="17" id="word" />
