--- a/201808/baidu/nettype.html
+++ b/201808/baidu/nettype.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Net Type</title>
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 </head>
 <body>
 	<p><span>NetType:</span><span id="netType"></span></p>
