--- a/201808/baidu/nettype.html
+++ b/201808/baidu/nettype.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Net Type</title>
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<script type="text/javascript" src="https://res.wx.qq.com/mmbizwap/zh_CN/htmledition/js/vconsole/3.0.0/vconsole.min.js"></script>
+	<script type="text/javascript">
+		var vConsole = new VConsole();
+	</script>
 </head>
 <body>
 	<p><span>NetType:</span><span id="netType"></span></p>
