--- a/201808/youdao_note/index.html
+++ b/201808/youdao_note/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>有道云笔记</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script>
     	document.documentElement.style.fontSize = document.documentElement.clientWidth / 7.5 + 'px';
     </script>
