--- a/201808/client_width/demo2.html
+++ b/201808/client_width/demo2.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="css/demo2.css">
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/demo2.css">
 </head>
+
 <body>
-	<div id="div1">Hello World</div>
-	<div id="div2">Hello World</div>
+    <div id="div1">Hello World</div>
+    <div id="div2">Hello World</div>
 </body>
+
 </html>
+<script type="text/javascript">
+!(function(doc, win) {
+    var docEle = doc.documentElement,
+        evt = "onorientationchange" in window ? "orientationchange" : "resize",
+        fn = function() {
+            var width = docEle.clientWidth;
+            width && (docEle.style.fontSize = 20 * (width / 320) + "px");
+        };
+
+    win.addEventListener(evt, fn, false);
+    doc.addEventListener("DOMContentLoaded", fn, false);
+
+}(document, window));
+</script>
