--- a/201808/client_width/demo2.html
+++ b/201808/client_width/demo2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/demo2.css">
+    <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
