--- a/201808/20180828/demo2.html
+++ b/201808/20180828/demo2.html
@@ -10,28 +10,35 @@
 
 <body>
     <div id="app">
-        {{now}}
+        <div class="static" v-bind:class="class1">class特性数据绑定-语法</div>
+        <div class="static" v-bind:class="[class2,class3]">class特性数据绑定-语法</div>
+        <div class="static" v-bind:class="classObj">class特性数据绑定-语法</div>
+        <div class="static" v-bind:class="classArr">class特性数据绑定-语法</div>
+        <div class="static" v-bind:class="{xx8:booleanTrue1,xx9:booleanTrue2,xx10:booleanFalse1}">class特性数据绑定-语法</div>
+        <div class="static" v-bind:class="booleanTrue1 ? 'xx11' : 'xx12'">class特性数据绑定-语法</div>
     </div>
     <script type="text/javascript">
     var app = new Vue({
         el: "#app",
         data: {
-            message: "Hello Vue!"
+            booleanTrue1: true,
+            booleanTrue2: true,
+            booleanFalse1: false,
+            booleanFalse2: false,
+            class1: "xx1",
+            class2: "xx2",
+            class3: "xx3",
+            classObj: {
+                "xx4": true,
+                "xx5": true
+            },
+            classArr: ["xx6", "xx7"]
         },
         computed: {
-            reverseMessage: function() {
-                return this.message.split("").reverse().join("");
-            },
-            now: function() {
-                return Date.now()
-            }
+
         },
         watch: {
-            message: function() {
-                setTimeout($.proxy(function() {
-                    console.log(this.message);
-                }, this), 1000);
-            }
+
         }
     });
     </script>
