--- a/201808/vue-demo/demo4.html
+++ b/201808/vue-demo/demo4.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vue实例各生命周期</title>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+	<script src="/js/vue-2.5.17.js"></script>
 </head>
 <body>
 	<div id="app"></div>
