--- a/201808/vue-demo/demo8.html
+++ b/201808/vue-demo/demo8.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Vue Events</title>
-	<script type="text/javascript" src="/js/vue-2.5.17.js"></script>
+    <meta charset="UTF-8">
+    <title>Vue Events</title>
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <script type="text/javascript" src="/js/vue-2.5.17.js"></script>
 </head>
+
 <body>
-	<div id="app">
-		<button v-on:click="buttonClickHandler">click me!</button>
-	</div>
-	<script type="text/javascript">
-		var app = new Vue({
-			el:"#app",
-			data:{},
-			methods:{
-				buttonClickHandler:function(msg,events){
-					console.log(msg,events);
-				}
-			}
-		});
-	</script>
+    <div id="app">
+        <div>
+            <select v-model="selected">
+                <option disabled value="">请选择</option>
+                <option>A</option>
+                <option>B</option>
+                <option>C</option>
+            </select>
+            <span>Selected: {{ selected }}</span>
+        </div>
+    </div>
+    <script type="text/javascript">
+    var app = new Vue({
+        el: '#app',
+        data: {
+            selected: ''
+        }
+    })
+    </script>
 </body>
+
 </html>
