--- a/201808/fileupload/demo5.html
+++ b/201808/fileupload/demo5.html
@@ -36,53 +36,56 @@
 </head>
 <body>
 	<div id="app">
-		<!-- http://www.yanhu.com/201808/fileupload/domo6.php -->
-	<el-upload class="avatar-uploader" action="http://www.holdon.ltd/domo6.php" :show-file-list="false" :on-success="handleAvatarSuccess" :before-upload="beforeAvatarUpload">
-	  <img v-if="imageUrl" :src="imageUrl" class="avatar">
-	  <i v-else class="el-icon-plus avatar-uploader-icon"></i>
-	</el-upload>
+		<el-upload 
+			class="avatar-uploader" 
+			action="domo6.php" 
+			v-bind:show-file-list="false" 
+			v-bind:on-success="handleAvatarSuccess" 
+			v-bind:before-upload="beforeAvatarUpload">
+		  	<img v-if="imageUrl" 
+		  		v-bind:src="imageUrl" 
+		  		class="avatar">
+		  	<i v-else class="el-icon-plus avatar-uploader-icon"></i>
+		</el-upload>
 	</div>
 	<script type="text/javascript">
-		var Main = {
-		    data() {
-		      return {
-		        imageUrl: 'http://www.holdon.ltd/img/headimg.jpg'
-		      };
-		    },
-		    methods: {
-		      handleAvatarSuccess(res, file) {
-		        this.imageUrl = URL.createObjectURL(file.raw);
-		      },
-		      beforeAvatarUpload(file) {
-		        const isJPG = file.type === 'image/jpeg';
-		        const isLt2M = file.size / 1024 / 1024 < 2;
+		var Main = {}
+		new Vue({
+			el:"#app",
+			data: {
+			    imageUrl: ''
+			},
+			methods: {
+			    handleAvatarSuccess(res, file) {
+			        this.imageUrl = URL.createObjectURL(file.raw);
+			    },
+			    beforeAvatarUpload(file) {
+			        const isJPG = file.type === 'image/jpeg';
+			        const isLt2M = file.size / 1024 / 1024 < 2;
 
-		        if (!isJPG) {
-		          this.$message.error('上传头像图片只能是 JPG 格式!');
-		        }
-		        if (!isLt2M) {
-		          this.$message.error('上传头像图片大小不能超过 2MB!');
-		        }
-		        return isJPG && isLt2M;
-		      }
-		    },
-		    mounted:function(){
-		    	var that = this;
-		    	$.ajax({
-		    	    // url: "http://www.yanhu.com/201808/fileupload/domo7.php",
-		    	    url: "http://www.holdon.ltd/domo7.php",
-		    	    data: {},
-		    	    dataType: "json",
-		    	    success: function(rs) {
-		    	    	that.imageUrl = rs.img;
-		    	    },
-		    	    error: function() {
-		    	    }
-		    	});
-		    }
-		  }
-		var Ctor = Vue.extend(Main)
-		new Ctor().$mount('#app')
+			        if (!isJPG) {
+			            this.$message.error('上传头像图片只能是 JPG 格式!');
+			        }
+			        if (!isLt2M) {
+			            this.$message.error('上传头像图片大小不能超过 2MB!');
+			        }
+			        return isJPG && isLt2M;
+			    }
+			},
+			mounted: function() {
+				return;
+			    var that = this;
+			    $.ajax({
+			        url: "http://www.yanhu.com/201808/fileupload/domo7.php",
+			        data: {},
+			        dataType: "json",
+			        success: function(rs) {
+			            that.imageUrl = rs.img;
+			        },
+			        error: function() {}
+			    });
+			}
+		});
 	</script>
 </body>
 </html>
