--- a/201809/vuerouter/demo1.html
+++ b/201809/vuerouter/demo1.html
@@ -15,7 +15,7 @@
             <!-- 使用 router-link 组件来导航. -->
             <!-- 通过传入 `to` 属性指定链接. -->
             <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
-            <router-link to="/foo">Go to Foo</router-link>
+            <router-link v-bind:to="{name:'first',query:{a:1,b:2},params:{c:3,d:4},meta:{e:5,f:6}}">Go to Foo</router-link>
             <router-link to="/bar">Go to Bar</router-link>
         </p>
         <!-- 路由出口 -->
@@ -46,7 +46,11 @@
     // 或者，只是一个组件配置对象。
     // 我们晚点再讨论嵌套路由。
     const routes = [
-        { path: '/foo', component: Foo },
+        { 
+            path: '/foo', 
+            component: Foo,
+            name:'first' 
+        },
         { path: '/bar', component: Bar }
     ]
 
