--- a/201809/iframe/Noname1.html
+++ b/201809/iframe/Noname1.html
@@ -5,9 +5,8 @@
 </HEAD>
 
 <BODY>
+	我是第1页
     <iframe src="Noname2.html" height=500 width=500 name="baidu"></iframe>
-    <br>
-    <input type="button" value="Back" onclick="document.frames['baidu'].history.back()">
 </BODY>
 
 </HTML>
